Added graph reporting

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b6c18653-9acf-4aa5-9800-76dadb55a338",
    "metadata": {
@@ -11,7 +10,7 @@
     "# Benchmark latency for Amazon Bedrock models\n",
     "Use this notebook to measure model latency in Amazon Bedrock.  \n",
     "Start by:\n",
-    "1. Specifying scenarios to test and benchmark configuraiton (or use default).\n",
+    "1. Specifying the scenarios to test (`scenarios`)\n",
     "2. Execute benchmarks\n",
     "3. Observe results statistics as data and graphs."
    ]
@@ -28,37 +27,17 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "cba27c14-67c3-4771-bdd7-3421990ba4c0",
-   "metadata": {},
-   "source": [
-    "`iterations_per_scenario` - The number of times to benchmark each scenario. This is important in measuring variance and average response time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "649f730a-36a4-4f5c-a29b-a28eb31733f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iterations_per_scenario = 3 "
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3f10c830-71d3-4253-8b7d-74e372f3f394",
    "metadata": {},
    "source": [
-    "`scenarios`- A list of scenarios you would like to benchmark\n",
+    "Here are various possible scenarios to benchmark.\n",
     "Each scenario is a dictionary with latency relevant keys:\n",
     "- `model_id` - the model to test, smaller models are likely slower. Currently only Anthropic models are supported.\n",
     "- `in_tokens` - the number of tokens to feed to the model. aka: input context length. Range: 40 - 100K.\n",
     "- `out_tokens` - the number of tokens for the model to generate. Range: 1 - 8191.\n",
-    "- `region` - The AWS region to invoke the response to. This can affect network latency depending on client location.\n",
-    "- `stream` - A streaming response starts returning tokens to the client as they are generated, instead of waiting before returning the complete resopnses. This should be True for interactive use cases.\n",
+    "- `region` - The AWS region to invoke Bedrock in. This can affect network latency depending on client location.\n",
+    "- `stream` - True|False - A streaming response starts returning tokens to the client as they are generated, instead of waiting before returning the complete resopnses. This should be True for interactive use cases.\n",
     "- `name` - a human readable name for the scenario (will appear in reports and graphs)."
    ]
   },
@@ -103,7 +82,7 @@
     "                'model_id'    : 'anthropic.claude-v2',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-east-1',\n",
+    "                'region'     : 'us-west-2',\n",
     "                'stream' : True,\n",
     "                'name' : f'us-west-2. in=200, out=50',\n",
     "            },\n",
@@ -136,9 +115,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scenarios = use_cases_scenarios\n",
-    "#scenarios = region_compare_scenarios\n",
-    "scenarios = model_compare_scenarios"
+    "#scenarios = use_cases_scenarios.copy()\n",
+    "scenarios = region_compare_scenarios.copy()\n",
+    "#scenarios = model_compare_scenarios.copy()\n",
+    "\n",
+    "# The number of times to benchmark each scenario. This is important in measuring variance and average response time.\n",
+    "iterations_per_scenario = 3 "
    ]
   },
   {
@@ -200,8 +182,9 @@
     "    tokens += '\\n\\nAssistant:one two'  # model will continue with \" three four five...\"\n",
     "    return tokens\n",
     "\n",
-    "\n",
-    "# `create_prompt` will create a prompt of length `expected_num_tokens` that is desigend to generate extremely long model resopnse\n",
+    "''' \n",
+    "This method creates a prompt of input length `expected_num_tokens` which instructs the LLM to generate extremely long model resopnse\n",
+    "'''\n",
     "def create_prompt(expected_num_tokens):\n",
     "    num_tokens_in_prompt_template = anthropic_client.count_tokens(_get_prompt_template(0))\n",
     "    additional_tokens_needed = max(expected_num_tokens - num_tokens_in_prompt_template,0)\n",
@@ -268,7 +251,7 @@
     "                stop_reason = response_body['stop_reason']\n",
     "\n",
     "            \n",
-    "            # verify we got all of the intended output tokens\n",
+    "            # verify we got all of the intended output tokens by verifying stop_reason\n",
     "            assert stop_reason == 'max_tokens', f\"stop_reason is {stop_reason} instead of 'max_tokens', this means the model generated less tokens than required.\"\n",
     "\n",
     "            duration_to_first_byte = first_byte - start\n",
@@ -292,16 +275,36 @@
    },
    "outputs": [],
    "source": [
-    "# Get a boto3 bedrock runtime client for invoking requests\n",
-    "# region - the AWS region to use\n",
-    "# Note: Removing auto retries to ensure we're measuring a single transcation (e.g., in case of throttling).\n",
-    "def get_bedrock_client(region, warmup=True):\n",
+    "''' \n",
+    "Get a boto3 bedrock runtime client for invoking requests\n",
+    "region - the AWS region to use\n",
+    "Note: Removing auto retries to ensure we're measuring a single transcation (e.g., in case of throttling).\n",
+    "'''\n",
+    "def _get_bedrock_client(region, warmup=True):\n",
     "    client = boto3.client( service_name='bedrock-runtime',\n",
     "                          region_name=region,\n",
     "                          config=botocore.config.Config(retries=dict(max_attempts=0))) \n",
     "    if warmup:\n",
     "        benchmark(client, create_prompt(50), 1)\n",
-    "    return client"
+    "    return client\n",
+    "\n",
+    "'''\n",
+    "Get a possible cache client per AWS region \n",
+    "'''\n",
+    "client_per_region={}\n",
+    "def get_cached_client(region):\n",
+    "    if client_per_region.get(region) is None:\n",
+    "        client_per_region[region] = _get_bedrock_client(region)\n",
+    "    return client_per_region[region]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "deed7243",
+   "metadata": {},
+   "source": [
+    "# Execute the benchmark"
    ]
   },
   {
@@ -314,13 +317,6 @@
     "import pprint\n",
     "pp = pprint.PrettyPrinter(indent=2)\n",
     "\n",
-    "client_per_region={}\n",
-    "def get_cached_client(region):\n",
-    "    if client_per_region.get(region) is None:\n",
-    "        client_per_region[region] = get_bedrock_client(region)\n",
-    "    return client_per_region[region]\n",
-    "\n",
-    "\n",
     "early_break = False # early breaking will break after a single scenario, useful for debugging.\n",
     "\n",
     "for scenario in scenarios:\n",
@@ -332,8 +328,8 @@
     "\n",
     "            if 'durations' not in scenario: scenario['durations'] = list()\n",
     "            duration = {\n",
-    "                'time-to-first-byte':  time_to_first_token,\n",
-    "                'time-to-last-byte':  time_to_last_token,\n",
+    "                'time-to-first-token':  time_to_first_token,\n",
+    "                'time-to-last-token':  time_to_last_token,\n",
     "            }\n",
     "            scenario['durations'].append(duration)\n",
     "\n",
@@ -364,7 +360,7 @@
    },
    "outputs": [],
    "source": [
-    "pp.pprint(scenarios)\n"
+    "pp.pprint(scenarios)"
    ]
   },
   {
@@ -376,7 +372,22 @@
    },
    "outputs": [],
    "source": [
-    "# TODO add a graph of different scenarios on the same axis"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "for scenario in scenarios:\n",
+    "  durations = [d['time-to-first-token'] for d in scenario['durations']]\n",
+    "  \n",
+    "  ax.boxplot(durations, positions=[scenarios.index(scenario)])\n",
+    "  \n",
+    "  ax.set_xticks(range(len(scenarios)))\n",
+    "  ax.set_xticklabels([s['name'] for s in scenarios])\n",
+    "  \n",
+    "  ax.set_ylabel('Time to first token (sec)')\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
