parameterized metric to show in graph

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -76,7 +76,7 @@
     "                'out_tokens' : 50,\n",
     "                'region'     : 'us-east-1',\n",
     "                'stream' : True,\n",
-    "                'name' : f'claude-v2. in=200, out=50',\n",
+    "                'name' : f'us-east-1. in=200, out=50',\n",
     "            },\n",
     "            {\n",
     "                'model_id'    : 'anthropic.claude-v2',\n",
@@ -116,8 +116,8 @@
    "outputs": [],
    "source": [
     "#scenarios = use_cases_scenarios.copy()\n",
-    "scenarios = region_compare_scenarios.copy()\n",
-    "#scenarios = model_compare_scenarios.copy()\n",
+    "#scenarios = region_compare_scenarios.copy()\n",
+    "scenarios = model_compare_scenarios.copy()\n",
     "\n",
     "# The number of times to benchmark each scenario. This is important in measuring variance and average response time.\n",
     "iterations_per_scenario = 3 "
@@ -376,19 +376,30 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
+    "metric = 'time-to-first-token'\n",
+    "#metric = 'time-to-last-token'\n",
+    "\n",
     "for scenario in scenarios:\n",
-    "  durations = [d['time-to-first-token'] for d in scenario['durations']]\n",
+    "  durations = [d[metric] for d in scenario['durations']]\n",
     "  \n",
     "  ax.boxplot(durations, positions=[scenarios.index(scenario)])\n",
     "  \n",
     "  ax.set_xticks(range(len(scenarios)))\n",
     "  ax.set_xticklabels([s['name'] for s in scenarios])\n",
     "  \n",
-    "  ax.set_ylabel('Time to first token (sec)')\n",
+    "  ax.set_ylabel(f'{metric} (sec)')\n",
     "\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c84d4a4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
