--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -10,18 +10,16 @@
     "# Amazon Bedrock - Latency Benchmark Tool\n",
     "This notebook contains a set of tools to benchmark inference latency for Foundation Models available in Amazon Bedrock. \n",
     "\n",
-    "You can evaluate latency for different scenarios such as comparisson between models, regions, use cases...\n",
+    "You can evaluate latency for different scenarios such as comparison between models, regions, use cases...\n",
     "\n",
-    "To run this notebook you will need to have the appropiate access to Amazon Bedrock, and previously enabled the models from the Amazon Bedrock Console. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ba2be4a8-966b-450d-9fcc-cf356e0a26da",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
+    "To run this notebook you will need to have the appropiate access to Amazon Bedrock, and previously enabled the models from the Amazon Bedrock Console. \n",
+    "\n",
+    "## Scenarios in this notebook\n",
+    "\n",
+    "#### 1. Model Comparison \n",
+    "#### 2. Region Comparison\n",
+    "#### 3. Use Case Comparison\n",
+    "\n",
     "## Install needed dependencies\n",
     "This notebook requires a Python 3 environment"
    ]
@@ -41,14 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d90ae496-c922-446d-9928-b49abf2439c9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from utils.utils import benchmark, create_prompt, execute_benchmark, get_cached_client, post_iteration, show_results"
+    "from utils.utils import benchmark, create_prompt, execute_benchmark, get_cached_client, post_iteration\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -58,14 +57,8 @@
     "tags": []
    },
    "source": [
-    "## Scenario keys and configurations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5c45bdd-73bd-488b-b704-a7a08d3377f3",
-   "metadata": {},
-   "source": [
+    "## Scenario keys and configurations\n",
+    "\n",
     "Each scenario is a dictionary with latency relevant keys:\n",
     "\n",
     "| Key | Definition |\n",
@@ -75,16 +68,8 @@
     "| `out_tokens` | The number of tokens for the model to generate. Range: 1 - 8191. |\n",
     "| `region` | The AWS region to invoke Bedrock in. This can affect network latency depending on client location. |\n",
     "| `stream` | True&#124;False - A streaming response starts returning tokens to the client as they are generated, instead of waiting before returning the complete resopnses. This should be True for interactive use cases.|\n",
-    "| `name` | A human readable name for the scenario (will appear in reports and graphs). |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21da9397-ab9e-482e-bcab-5ee752ad86d0",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
+    "| `name` | A human readable name for the scenario (will appear in reports and graphs). |\n",
+    "\n",
     "Each scenario also has a benchmark configuration you can modify:\n",
     "\n",
     "| Key | Definition |\n",
@@ -97,10 +82,11 @@
    "cell_type": "markdown",
    "id": "c6c14d81-e230-4a7b-bb9c-6aae36d23740",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## Scenario 1. Model Comparisson"
+    "## Scenario 1. Model Comparison"
    ]
   },
   {
@@ -146,16 +132,70 @@
    },
    "outputs": [],
    "source": [
-    "early_break = False # early breaking will break after a single scenario, useful for debugging.\n",
-    "execute_benchmark(model_compare_scenarios,scenario_config, early_break)"
+    "scenarios = execute_benchmark(model_compare_scenarios,scenario_config)\n",
+    "# Early breaking will break after a single scenario, useful for debugging.\n",
+    "#execute_benchmark(model_compare_scenarios,scenario_config, early_break = True) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6be2e495-dde6-46d1-9061-fb8c5751d781",
+   "metadata": {},
+   "source": [
+    "### Results\n",
+    "Adapt the show_results function to the type of data representation you wish to use. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7921f2dc-86d3-4b59-b88b-22ce604084a2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def show_results(scenarios):\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "\n",
+    "    metric = 'time-to-first-token'\n",
+    "    #metric = 'time-to-last-token'\n",
+    "\n",
+    "    for scenario in scenarios:\n",
+    "      durations = [d[metric] for d in scenario['durations']]\n",
+    "\n",
+    "      ax.boxplot(durations, positions=[scenarios.index(scenario)])\n",
+    "\n",
+    "      ax.set_xticks(range(len(scenarios)))\n",
+    "      ax.set_xticklabels([s['name'] for s in scenarios])\n",
+    "\n",
+    "      ax.set_ylabel(f'{metric} (sec)')\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d588480-00c6-4e48-b045-aac5dc3bc42e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "show_results(scenarios)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b110537c-aab1-484e-b57f-f0d340e38707",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Scenario 2. Region Comparisson"
+    "## Scenario 2. Region Comparison"
    ]
   },
   {
@@ -218,16 +258,70 @@
    },
    "outputs": [],
    "source": [
-    "early_break = False # early breaking will break after a single scenario, useful for debugging.\n",
-    "execute_benchmark(region_compare_scenarios,scenario_config, early_break)"
+    "scenarios = execute_benchmark(region_compare_scenarios,scenario_config)\n",
+    "# Early breaking will break after a single scenario, useful for debugging.\n",
+    "#execute_benchmark(region_compare_scenarios,scenario_config, early_break = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b47558c5-e64b-4e5d-a628-d3892468eb08",
+   "metadata": {},
+   "source": [
+    "### Results\n",
+    "Adapt the show_results function to the type of data representation you wish to use. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a4ad96a-adcc-4f89-995a-fda47b9623df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def show_results(scenarios):\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "\n",
+    "    metric = 'time-to-first-token'\n",
+    "    #metric = 'time-to-last-token'\n",
+    "\n",
+    "    for scenario in scenarios:\n",
+    "      durations = [d[metric] for d in scenario['durations']]\n",
+    "\n",
+    "      ax.boxplot(durations, positions=[scenarios.index(scenario)])\n",
+    "\n",
+    "      ax.set_xticks(range(len(scenarios)))\n",
+    "      ax.set_xticklabels([s['name'] for s in scenarios])\n",
+    "\n",
+    "      ax.set_ylabel(f'{metric} (sec)')\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30aeffe9-cecb-4b78-b179-cfb2a1c15e85",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "show_results(scenarios)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "0c0952d0-a749-4f63-b40f-185db63573d5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Scenario 3. Use Case Comparisson"
+    "## Scenario 3. Use Case Comparison"
    ]
   },
   {
@@ -273,8 +367,62 @@
    },
    "outputs": [],
    "source": [
-    "early_break = False # early breaking will break after a single scenario, useful for debugging.\n",
-    "execute_benchmark(use_cases_scenarios,scenario_config, early_break)"
+    "execute_benchmark(use_cases_scenarios,scenario_config, early_break = True)\n",
+    "# Early breaking will break after a single scenario, useful for debugging.\n",
+    "#execute_benchmark(use_cases_scenarios,scenario_config, early_break = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aabb709-b1e3-4bb2-86da-da5b22f268df",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Results\n",
+    "Adapt the show_results function to the type of data representation you wish to use. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbb100bb-8d92-4238-89a9-62ca6a96079c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def show_results(scenarios):\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "\n",
+    "    metric = 'time-to-first-token'\n",
+    "    #metric = 'time-to-last-token'\n",
+    "\n",
+    "    for scenario in scenarios:\n",
+    "      durations = [d[metric] for d in scenario['durations']]\n",
+    "\n",
+    "      ax.boxplot(durations, positions=[scenarios.index(scenario)])\n",
+    "\n",
+    "      ax.set_xticks(range(len(scenarios)))\n",
+    "      ax.set_xticklabels([s['name'] for s in scenarios])\n",
+    "\n",
+    "      ax.set_ylabel(f'{metric} (sec)')\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f162f24-ca36-43da-ba23-2e28c85edc25",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "show_results(scenarios)"
    ]
   }
  ],
@@ -854,7 +1002,6 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Base Python 3.0)",
    "language": "python",
