organizing in scenarios

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b6c18653-9acf-4aa5-9800-76dadb55a338",
    "metadata": {
@@ -12,16 +13,17 @@
     "\n",
     "You can evaluate latency for different scenarios such as comparison between models, regions, use cases...\n",
     "\n",
-    "To run this notebook you will need to have the appropiate access to Amazon Bedrock, and previously enabled the models from the Amazon Bedrock Console. \n",
+    "To run this notebook you will need to have the appropriate access to Amazon Bedrock, and previously enabled the models from the Amazon Bedrock Console. \n",
     "\n",
-    "## Scenarios in this notebook\n",
+    "## Examples included in this notebook\n",
+    "1. [Use Case Comparison](#uc-compare) - Compare the latency of a given model across different LLM use cases (e.g., Summarization and classification).\n",
+    "2. [Region Comparison](#region-compare)\n",
+    "Comparing latency between two different models.\n",
+    "3. [Model Comparison](#model-compare) \n",
+    "Comparing the latency of a given model across different AWS regions.\n",
     "\n",
-    "#### 1. Model Comparison \n",
-    "#### 2. Region Comparison\n",
-    "#### 3. Use Case Comparison\n",
-    "\n",
-    "## Install needed dependencies\n",
-    "This notebook requires a Python 3 environment"
+    "### Install needed dependencies\n",
+    "Note: This notebook requires a basic Python 3 environment (e.g, `Base Python 3.0` in SageMaker Studio Notebooks)"
    ]
   },
   {
@@ -46,11 +48,14 @@
    },
    "outputs": [],
    "source": [
-    "from utils.utils import benchmark, create_prompt, execute_benchmark, get_cached_client, post_iteration\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "from utils.utils import benchmark, create_prompt, execute_benchmark, get_cached_client, post_iteration, graph_scenarios_boxplot\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0233b6f7-1996-4fa5-8378-6e88bd64cd73",
    "metadata": {
@@ -63,11 +68,11 @@
     "\n",
     "| Key | Definition |\n",
     "|-|-|\n",
-    "| `model_id` | The model to test, smaller models are likely slower. Currently only Anthropic models are supported. |\n",
-    "| `in_tokens` | The number of tokens to feed to the model. aka: input context length. Range: 40 - 100K.|\n",
+    "| `model_id` | The Bedrock model_id to test. Smaller models are likely faster. Currently only Anthropic models are supported. |\n",
+    "| `in_tokens` | The number of tokens to feed to the model (input context length). The range depends on the model_id. For example: 40 - 100K for Claude-2. |\n",
     "| `out_tokens` | The number of tokens for the model to generate. Range: 1 - 8191. |\n",
     "| `region` | The AWS region to invoke Bedrock in. This can affect network latency depending on client location. |\n",
-    "| `stream` | True&#124;False - A streaming response starts returning tokens to the client as they are generated, instead of waiting before returning the complete resopnses. This should be True for interactive use cases.|\n",
+    "| `stream` | True&#124;False - A streaming response starts returning tokens to the client as they are generated, instead of waiting before returning the complete responses. This should be True for interactive use cases.|\n",
     "| `name` | A human readable name for the scenario (will appear in reports and graphs). |\n",
     "\n",
     "Each scenario also has a benchmark configuration you can modify:\n",
@@ -79,6 +84,87 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "870dd288",
+   "metadata": {},
+   "source": [
+    "## Example 1. LLM Use Case Comparison\n",
+    "<a id=\"uc-compare\"></a>\n",
+    "Compare the latency of a given model across different LLM use cases. \n",
+    "For example Summarization and classification:\n",
+    "- A Summarization use case is typically characterized by a lengthy input and a much shorter response. We used 2000 `in_tokens` and 200 `out_tokens`.\n",
+    "- A Classification use case is typically  characterized by a lengthy/medium input size and is single returned class (token).\n",
+    "We used 400 `in_tokens` and a single `out_tokens`.\n",
+    "\n",
+    "Feel free to change the scenarios to better match your own use cases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "881ad5c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use_cases_scenarios = [\n",
+    "            {\n",
+    "                'model_id'    : 'anthropic.claude-v2',\n",
+    "                'in_tokens'  : 2000,\n",
+    "                'out_tokens' : 200,\n",
+    "                'region'     : 'us-east-1',\n",
+    "                'stream' : True,\n",
+    "                'name' : f'Summarization. in=2000, out=200',\n",
+    "            },\n",
+    "            {\n",
+    "                'model_id'    : 'anthropic.claude-v2',\n",
+    "                'in_tokens' : 400,\n",
+    "                'out_tokens' : 1,\n",
+    "                'region'     : 'us-east-1',\n",
+    "                'stream' : True,\n",
+    "                'name' : f'Classification. in=400, out=1',\n",
+    "            },\n",
+    "]\n",
+    "\n",
+    "scenario_config = {\n",
+    "    \"invocations_per_scenario\" : 2,\n",
+    "    \"sleep_between_invocations\": 5\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f89fb52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scenarios = execute_benchmark(use_cases_scenarios, scenario_config, early_break = False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "aed9a92c",
+   "metadata": {},
+   "source": [
+    "#### Analyze results \n",
+    "The results show should show that summarization has a higher latency than classification due to the smaller number of input and output tokens.  \n",
+    "Note: Learn more on how to read boxplots [here](https://builtin.com/data-science/boxplot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77b2b34f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_scenarios_boxplot(scenarios=scenarios, title=f\"Use cases compare: [{scenarios[0]['name']}], [{scenarios[1]['name']}]\")"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c6c14d81-e230-4a7b-bb9c-6aae36d23740",
    "metadata": {
@@ -86,7 +172,9 @@
     "tags": []
    },
    "source": [
-    "## Scenario 1. Model Comparison"
+    "## Example 2. Model Comparison\n",
+    "<a id=\"model-compare\"></a>\n",
+    "Here we'll be comparing the latency of two different models: `anthropic.claude-v2` and `anthropic.claude-instant-v1`. We expect `anthropic.claude-v2` to be slower as it is a bigger, more capable and more expensive model."
    ]
   },
   {
@@ -100,7 +188,7 @@
    "source": [
     "model_compare_scenarios = [\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-v2',\n",
+    "                'model_id'    : 'anthropic.claude-v2', # <---- changed\n",
     "                'in_tokens'  : 200,\n",
     "                'out_tokens' : 50,\n",
     "                'region'     : 'us-east-1',\n",
@@ -108,7 +196,7 @@
     "                'name' : f'claude-v2. in=200, out=50',\n",
     "            },\n",
     "            {\n",
-    "                'model_id'    : 'anthropic.claude-instant-v1',\n",
+    "                'model_id'    : 'anthropic.claude-instant-v1', # <---- changed\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
     "                'region'     : 'us-east-1',\n",
@@ -132,18 +220,17 @@
    },
    "outputs": [],
    "source": [
-    "scenarios = execute_benchmark(model_compare_scenarios,scenario_config)\n",
-    "# Early breaking will break after a single scenario, useful for debugging.\n",
-    "#execute_benchmark(model_compare_scenarios,scenario_config, early_break = True) "
+    "scenarios = execute_benchmark(model_compare_scenarios, scenario_config)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6be2e495-dde6-46d1-9061-fb8c5751d781",
    "metadata": {},
    "source": [
     "### Results\n",
-    "Adapt the show_results function to the type of data representation you wish to use. "
+    "Results show show that claude-instant-v1 is faster than Claude-v2."
    ]
   },
   {
@@ -155,57 +242,30 @@
    },
    "outputs": [],
    "source": [
-    "def show_results(scenarios):\n",
-    "\n",
-    "    fig, ax = plt.subplots()\n",
-    "\n",
-    "    metric = 'time-to-first-token'\n",
-    "    #metric = 'time-to-last-token'\n",
-    "\n",
-    "    for scenario in scenarios:\n",
-    "      durations = [d[metric] for d in scenario['durations']]\n",
-    "\n",
-    "      ax.boxplot(durations, positions=[scenarios.index(scenario)])\n",
-    "\n",
-    "      ax.set_xticks(range(len(scenarios)))\n",
-    "      ax.set_xticklabels([s['name'] for s in scenarios])\n",
-    "\n",
-    "      ax.set_ylabel(f'{metric} (sec)')\n",
-    "\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()"
+    "graph_scenarios_boxplot(scenarios=scenarios, title=f\"Model compare: [{scenarios[0]['name']}], [{scenarios[1]['name']}]\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d588480-00c6-4e48-b045-aac5dc3bc42e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "show_results(scenarios)"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b110537c-aab1-484e-b57f-f0d340e38707",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Scenario 2. Region Comparison"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d24cf80-bd77-4016-ab48-dc564140b4c2",
-   "metadata": {},
-   "source": [
+    "## Example 3. Region Comparison\n",
+    "<a id=\"region-compare\"></a>\n",
+    "Here we'll be comparing the latency of a given model_id across three different AWS regions. Different regions resides in different timezone, and the load on each region can depend on the time of day.\n",
     "> **🚨 ALERT 🚨** Remember to enable the models in **all regions** you wish to test. \n",
     "You can learn how to manage model access in the following [page](https://docs.aws.amazon.com/bedrock/latest/userguide/model-access.html#manage-model-access).\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9d24cf80-bd77-4016-ab48-dc564140b4c2",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -221,7 +281,7 @@
     "                'model_id'    : 'anthropic.claude-instant-v1',\n",
     "                'in_tokens'  : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-east-1',\n",
+    "                'region'     : 'us-east-1', # <---- changed\n",
     "                'stream' : True,\n",
     "                'name' : f'us-east-1',\n",
     "            },\n",
@@ -229,7 +289,7 @@
     "                'model_id'    : 'anthropic.claude-instant-v1',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-west-2',\n",
+    "                'region'     : 'us-west-2', # <---- changed\n",
     "                'stream' : True,\n",
     "                'name' : f'us-west-2',\n",
     "            },\n",
@@ -237,7 +297,7 @@
     "                'model_id'    : 'anthropic.claude-instant-v1',\n",
     "                'in_tokens' : 200,\n",
     "                'out_tokens' : 50,\n",
-    "                'region'     : 'eu-central-1',\n",
+    "                'region'     : 'eu-central-1', # <---- changed\n",
     "                'stream' : True,\n",
     "                'name' : f'eu-central-1',\n",
     "            },\n",
@@ -258,48 +318,17 @@
    },
    "outputs": [],
    "source": [
-    "scenarios = execute_benchmark(region_compare_scenarios,scenario_config)\n",
-    "# Early breaking will break after a single scenario, useful for debugging.\n",
-    "#execute_benchmark(region_compare_scenarios,scenario_config, early_break = True)"
+    "scenarios = execute_benchmark(region_compare_scenarios, scenario_config, early_break = False)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b47558c5-e64b-4e5d-a628-d3892468eb08",
    "metadata": {},
    "source": [
     "### Results\n",
-    "Adapt the show_results function to the type of data representation you wish to use. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a4ad96a-adcc-4f89-995a-fda47b9623df",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def show_results(scenarios):\n",
-    "\n",
-    "    fig, ax = plt.subplots()\n",
-    "\n",
-    "    metric = 'time-to-first-token'\n",
-    "    #metric = 'time-to-last-token'\n",
-    "\n",
-    "    for scenario in scenarios:\n",
-    "      durations = [d[metric] for d in scenario['durations']]\n",
-    "\n",
-    "      ax.boxplot(durations, positions=[scenarios.index(scenario)])\n",
-    "\n",
-    "      ax.set_xticks(range(len(scenarios)))\n",
-    "      ax.set_xticklabels([s['name'] for s in scenarios])\n",
-    "\n",
-    "      ax.set_ylabel(f'{metric} (sec)')\n",
-    "\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()"
+    "We don't apriori expect a particular region to be faster than others in a significant way. "
    ]
   },
   {
@@ -311,118 +340,16 @@
    },
    "outputs": [],
    "source": [
-    "show_results(scenarios)"
+    "graph_scenarios_boxplot(scenarios=scenarios, title=f\"Regions compare: [{scenarios[0]['name']}, {scenarios[1]['name']}, {scenarios[2]['name']}]\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "0c0952d0-a749-4f63-b40f-185db63573d5",
-   "metadata": {
-    "tags": []
-   },
+   "id": "0cf6a9ce",
+   "metadata": {},
    "source": [
-    "## Scenario 3. Use Case Comparison"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c48a280-a440-4e82-9fc9-25b683d77baf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "use_cases_scenarios = [\n",
-    "            {\n",
-    "                'model_id'    : 'anthropic.claude-v2',\n",
-    "                'in_tokens'  : 1000,\n",
-    "                'out_tokens' : 200,\n",
-    "                'region'     : 'us-east-1',\n",
-    "                'stream' : True,\n",
-    "                'name' : f'Summarization. in=1000, out=200',\n",
-    "            },\n",
-    "            {\n",
-    "                'model_id'    : 'anthropic.claude-v2',\n",
-    "                'in_tokens' : 200,\n",
-    "                'out_tokens' : 50,\n",
-    "                'region'     : 'us-east-1',\n",
-    "                'stream' : True,\n",
-    "                'name' : f'Classification. in=200, out=50',\n",
-    "            },\n",
-    "]\n",
-    "\n",
-    "scenario_config = {\n",
-    "    \"invocations_per_scenario\" : 2,\n",
-    "    \"sleep_between_invocations\": 5\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e09f1afc-66c5-4dd6-836b-6e4fe5a3b297",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "execute_benchmark(use_cases_scenarios,scenario_config, early_break = True)\n",
-    "# Early breaking will break after a single scenario, useful for debugging.\n",
-    "#execute_benchmark(use_cases_scenarios,scenario_config, early_break = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8aabb709-b1e3-4bb2-86da-da5b22f268df",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Results\n",
-    "Adapt the show_results function to the type of data representation you wish to use. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbb100bb-8d92-4238-89a9-62ca6a96079c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def show_results(scenarios):\n",
-    "\n",
-    "    fig, ax = plt.subplots()\n",
-    "\n",
-    "    metric = 'time-to-first-token'\n",
-    "    #metric = 'time-to-last-token'\n",
-    "\n",
-    "    for scenario in scenarios:\n",
-    "      durations = [d[metric] for d in scenario['durations']]\n",
-    "\n",
-    "      ax.boxplot(durations, positions=[scenarios.index(scenario)])\n",
-    "\n",
-    "      ax.set_xticks(range(len(scenarios)))\n",
-    "      ax.set_xticklabels([s['name'] for s in scenarios])\n",
-    "\n",
-    "      ax.set_ylabel(f'{metric} (sec)')\n",
-    "\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f162f24-ca36-43da-ba23-2e28c85edc25",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "show_results(scenarios)"
+    "# Done"
    ]
   }
  ],
