Fix hardcoded model bug

--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -17,10 +17,8 @@
     "\n",
     "## Examples included in this notebook\n",
     "1. [Use Case Comparison](#uc-compare) - Compare the latency of a given model across different LLM use cases (e.g., Summarization and classification).\n",
-    "2. [Region Comparison](#region-compare)\n",
-    "Comparing latency between two different models.\n",
-    "3. [Model Comparison](#model-compare) \n",
-    "Comparing the latency of a given model across different AWS regions.\n",
+    "2. [Region Comparison](#region-compare) - Comparing latency between two different models.\n",
+    "3. [Model Comparison](#model-compare) - Comparing the latency of a given model across different AWS regions.\n",
     "\n",
     "### Install needed dependencies\n",
     "Note: This notebook requires a basic Python 3 environment (e.g, `Base Python 3.0` in SageMaker Studio Notebooks)"
