--- a/bedrock-latency-benchmark.ipynb
+++ b/bedrock-latency-benchmark.ipynb
@@ -338,7 +338,11 @@
    },
    "outputs": [],
    "source": [
-    "graph_scenarios_boxplot(scenarios=scenarios, title=f\"Regions compare: [{scenarios[0]['name']}, {scenarios[1]['name']}, {scenarios[2]['name']}]\")"
+    "graph_scenarios_boxplot(\n",
+    "    scenarios=scenarios, \n",
+    "    title=f\"Regions compare: [{scenarios[0]['name']}, {scenarios[1]['name']}, {scenarios[2]['name']}]\" +\n",
+    "    f\"\\n[in_tokens={scenarios[0]['in_tokens']}, out_tokens={scenarios[0]['out_tokens']}]\"\n",
+    ")"
    ]
   },
   {
@@ -928,9 +932,9 @@
    }
   ],
   "kernelspec": {
-   "display_name": "Python 3 (Base Python 3.0)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/sagemaker-base-python-310-v1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -942,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
